ui changes and reaction time addition

--- a/instructions.html
+++ b/instructions.html
@@ -17,28 +17,28 @@
     <div class="container">
       <div id="instructions" class="row justify-content-center">
         <div id="instructions-one" class="col-8">
-          <p>
+          <p class="text-center">
             This study should only be completed on a computer with a keyboard.
           </p>
         </div>
         <div id="instructions-two" class="invisible col-8">
-          <p>
+          <p class="text-center">
             Please plan to complete the study in one sitting. If you navigate
             away from this page or if you stop to do something else, the task
             will continue to run and you will earn a low score and we will not
             be able to capture sufficient data to assess your performance. The
-            study should only take about 10 minutes. We ask that you please set
+            study should only take about 20 minutes. We ask that you please set
             aside other tasks and distractions until the study is over.
           </p>
         </div>
         <div id="instructions-three" class="invisible col-8">
-          <p>
+          <p class="text-center">
             Please make sure your volume is on, because you will have to hear
             the instructions.
           </p>
         </div>
         <div id="instructions-four" class="invisible col-8">
-          <p>
+          <p class="text-center">
             At this time, please maximize your browser window to make the window
             as large as possible.
           </p>
@@ -48,20 +48,35 @@
             If the target is ARMED press the “j” key on your keyboard.
           </p>
           <p class="text-center">
-            If the target is UNARMED press the “l” key on your keyboard.
+            If the target is UNARMED press the “f” key on your keyboard.
           </p>
-          <p>
+          <p class="text-center">
             Please respond as quickly and accurately as you can on each trial.
             Your response and reaction time will be recorded.
           </p>
-          <p>On each trial, you will also hear a number played during each trial.</p>
-          <p id="low-load" style="display: none">
-            You will be prompted to answer if the number you hear is higher or
-            lower than the number 5.
+          <p class="text-center">
+            On each trial, you will also hear a number played during each trial.
           </p>
-          <p id="high-load" style="display: none">
-            You will be prompted to answer if the number you hear is higher or
-            lower than the number you heard on the previous trial.
+          <p id="low-load" class="text-center" style="display: none">
+            You will be prompted to answer if the number you hear is numerically
+            higher or lower than the number 5.
+          </p>
+          <p id="high-load" class="text-center" style="display: none">
+            You will be prompted to answer if the number you hear is numerically
+            higher or lower than the number you heard on the previous trial.
+          </p>
+        </div>
+        <div id="instructions-six" class="invisible col-8">
+          <p class="text-center">
+            In this experiment we are measuring your reaction time and accuracy
+            to the shoot/don't shoot decisions you make. For that reason, we ask
+            that you rest your index fingers on the F and J keys at the start of
+            each trial.
+          </p>
+          <p class="text-center">
+            You can input your response to the number judgment task however is
+            most comfortable for you, but we want to make sure to get the
+            cleanest measure of response time as possible.
           </p>
         </div>
       </div>
