added instructions counter and max participants

--- a/instructions.html
+++ b/instructions.html
@@ -79,6 +79,11 @@
             cleanest measure of response time as possible.
           </p>
         </div>
+        <div id="instructions-seven" class="invisible col-8">
+          <p class="text-center">
+            For the purposes of this study, you are being asked to make these decisions within a very narrow time frame. However, we fully acknowledge that in real life, police officers approach the decision to shoot with utmost caution and rarely make these decisions as quickly as you are being asked to do here. Nevertheless, there are some times in which officers must make split decisions, and it is our goal to study the factors that inform those split second decisions. Please try to do your best to respond within the time frame so that we can gather as much usable data as possible from you.
+          </p>
+        </div>
       </div>
       <div class="row justify-content-center">
         <button
