--- a/study.html
+++ b/study.html
@@ -21,7 +21,7 @@
     <main class="flex-shrink-0">
       <div class="container">
         <div
-          id="instructions-seven"
+          id="instructions-eight"
           class="row justify-content-center align-items-center"
         >
           <div class="col-12 text-center font-weight-bold">
