--- a/instructions.html
+++ b/instructions.html
@@ -10,6 +10,10 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
+    <script src="https://www.gstatic.com/firebasejs/8.8.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.8.0/firebase-analytics.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.8.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.8.0/firebase-database.js"></script>
     <script type="text/javascript" src="./assets/js/app.js"></script>
     <title>Understanding the Decision to Use Deadly Force</title>
   </head>
